<resources>
    <string name="app_name">Instagram</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_reels">Reels</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_reels_fragment">Hello reels fragment</string>
    <string name="hello_store_fragment">Hello store fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="error_title">Vish, algo deu errado!!!</string>
    <string name="empty_list_title">Nenhum post encontrado</string>
    <string name="empty_list_cause">Ainda não encontramos posts para você \n Tente mais tarde</string>
    <string name="image_error">Imagem de error</string>
</resources>