<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_filled"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_reels"
        android:icon="@drawable/ic_reels_outline"
        android:title="@string/menu_reels"/>
    <item
        android:id="@+id/menu_store"
        android:icon="@drawable/ic_store_outline"
        android:title="@string/menu_store"/>
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_outline"
        android:title="@string/menu_profile"/>
</menu>